--- a/index.html
+++ b/index.html
@@ -183,17 +183,17 @@
                 <h1><u>clock face</u></h1>
                 <!-- clock images -->
                 <div class="img">
-                    <img src="clock.jpg" alt="clock-face-1" onclick="img1()">
-                    <img src="Clock-plate-1.png" alt="clock-face-2" onclick="img2()">
-                    <img src="Clock-plate-2.png" alt="clock-face-3" onclick="img3()">
-                    <img src="Clock-plate-3.png" alt="clock-face-4" onclick="img4()">
-                    <img src="Clock-plate-4.png" alt="clock-face-5" onclick="img5()">
-                    <img src="Clock-plate-5.png" alt="clock-face-6" onclick="img6()">
-                    <img src="Clock-plate-6.png" alt="clock-face-7" onclick="img7()">
-                    <img src="Clock-plate-7.png" alt="clock-face-8" onclick="img8()">
-                    <img src="Clock-plate-8.png" alt="clock-face-9" onclick="img9()">
-                    <img src="Clock-plate-9.png" alt="clock-face-10" onclick="img10()">
-                    <img src="Clock-plate-10.png" alt="clock-face-11" onclick="img11()">
+                    <img src="clock.jpg" alt="clock-face-1" onclick="img1(), clockBackground()">
+                    <img src="Clock-plate-1.png" alt="clock-face-2" onclick="img2(), clockBackground()">
+                    <img src="Clock-plate-2.png" alt="clock-face-3" onclick="img3(), clockBackground()">
+                    <img src="Clock-plate-3.png" alt="clock-face-4" onclick="img4(), clockBackground()">
+                    <img src="Clock-plate-4.png" alt="clock-face-5" onclick="img5(), clockBackground()">
+                    <img src="Clock-plate-5.png" alt="clock-face-6" onclick="img6(), clockBackground()">
+                    <img src="Clock-plate-6.png" alt="clock-face-7" onclick="img7(), clockBackground()">
+                    <img src="Clock-plate-7.png" alt="clock-face-8" onclick="img8(), clockBackground()">
+                    <img src="Clock-plate-8.png" alt="clock-face-9" onclick="img9(), clockBackground()">
+                    <img src="Clock-plate-9.png" alt="clock-face-10" onclick="img10(), clockBackground()">
+                    <img src="Clock-plate-10.png" alt="clock-face-11" onclick="img11(), clockBackground()">
                 </div>
             </div>
             <!-- am pm styles -->
@@ -238,16 +238,16 @@
             <!-- background styles -->
             <div id="bg-styles">
                 <div class="flex mr-top">
-                    <a href="#">
+                    <a href="#" onclick="backgroundTheme()">
                         <div class="blue1 si lg" onclick="blue()"> <div class="blue2 si m"> <div class="blue3 si s"></div> </div> <p class="small">blue</p> </div>
                     </a>
-                    <a href="#">
+                    <a href="#" onclick="backgroundTheme()">
                         <div class="red1 si lg" onclick="red()"> <div class="red2 si m"> <div class="red3 si s"> </div> </div> <p style="margin-left: 15px;">red</p> </div>
                     </a>
-                    <a href="#">
+                    <a href="#" onclick="backgroundTheme()">
                         <div class="green1 si lg" onclick="green()"> <div class="green2 si m"> <div class="green3 si s"> </div> </div> <p class="big">green</p> </div>
                     </a>
-                    <a href="#">
+                    <a href="#" onclick="backgroundTheme()">
                         <div class="yellow1 si lg" onclick="yellow()"> <div class="yellow2 si m"> <div class="yellow3 si s"> </div> </div> <p>yellow</p> </div>
                     </a>
                 </div>
